--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name=”keyword” content =”[Soal matematika sederhana, Soal matematika SMA]”>
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
@@ -39,7 +40,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
-
+    <meta name=”description” content=”[website ini merupakan website yang digunakan untuk acuan pembelajaran di Sekolah saya mengajar, sekaligus juga dapat digunakan untuk membagikan soal serta pembahasan soal-soal Matematika Sederhana]”>
     <title>Math_Dosman</title>
     <style>
       .center {
