--- a/kumpulanMateri/transformasi/index.html
+++ b/kumpulanMateri/transformasi/index.html
@@ -1121,16 +1121,20 @@
           </div>
         </div>
 
-        <div class="row p-2 justify-content-center">
-              <div class="col-md border">
-                  <div class="badge bg-danger text-wrap fs-6" style="width: 8rem"><b> Evaluasi 1.1 </b></div>
-                  <ol>
-                    <li>Tentukan</li>
-                  </ol>
-              </div>
-        </div>
+       
 <!-- ol luar -->
     </ol>
+    <div class="row justify-content-center">
+      <div class="col-md border">
+          <div class="badge bg-danger text-wrap fs-6" style="width: 8rem"><b> Evaluasi 6.1 </b></div>
+          <ol>
+            <li>Tentukan transformasi tunggal yang ekuivalen dengan pencerminan terhadap garis \(y=x\) kemudian dilanjutkan oleh pencerminan terhadap garis \(y=-x\)</li>
+            <li>Tentukan transformasi tunggal yang ekuivalen dengan pencerminan terhadap garis \(y=x\) kemudian dilanjutkan oleh pencerminan terhadap garis \(x=3\) </li>
+            <li>Tentukan transformasi tunggal yang ekuivalen dengan putaran terhadap \(O\) dengan sudut \(20^{\circ} \) kemudian dilanjutkan dengan sudut \(40^{\circ} \) </li>
+            <li>Tentukan bayangan titik \(P(3,5)\) jika dicerminkan terhadap garis \(x+2y+3=0 \) kemudian dilanjutkan oleh pencerminan terhadap garis \(2x-y-4=0\). </li>
+          </ol>
+      </div>
+</div>
   </div>
 
         </div>
@@ -1151,7 +1155,11 @@
         </div>
       </div>
     </section>
- 
+ <section style="padding-bottom: 3rem;" class="text-center text-danger fst-italic">
+  <br>
+  <h1>TERIMA KASIH</h1>
+  www.mathdosman.site
+ </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
