--- a/kumpulanMateri/transformasi/index.html
+++ b/kumpulanMateri/transformasi/index.html
@@ -161,7 +161,7 @@
                             <li>Jarak titik \(P\) terhadap garis \(l\) sama dengan jarak titik \(P'\) terhadap garis \(l\). </li>
                         </ol>
                         Pencerminan atau refleksi adalah transformasi yang memindahkan titik-titik dengan menggunakan sifat bayangan suatu cermin.
-                        Pencerminan yang sedang kita pelajari sekarang adalah pencerminan terhadap sumbu-<i>x</i>, sumbu-<i>y</i>, titik pusat koordinat \(O(0,0),), garis \(x=a\), garis \(y=b\), titik \(a,b\), garis \(y=x\) dan garis \(y=-x\).
+                        Pencerminan yang sedang kita pelajari sekarang adalah pencerminan terhadap sumbu-<i>x</i>, sumbu-<i>y</i>, titik pusat koordinat \(O(0,0)\), garis \(x=a\), garis \(y=b\), titik \(a,b\), garis \(y=x\) dan garis \(y=-x\).
                     </p>
                     <ol>
                         <b><li>Pencerminan terhadap sumbu-<i>x</i>, sumbu-<i>y</i> dan titik asal \(O(0,0)\)</li></b>
