--- a/kumpulanSoal/transformasiGeometri/transgeo2.html
+++ b/kumpulanSoal/transformasiGeometri/transgeo2.html
@@ -207,7 +207,7 @@
                 </div>
                 <hr />
                 <!-- soal no 5 ================================================================================================-->
-                <li>Pencerminan suatu titik terhadap garis \(x=3\) dilajutkan pencerminan terhadap garis \(x=5\) maka bayangan titik \((3,2) \) adalah . . .  </li>
+                <li>Pencerminan suatu titik terhadap garis \(x=3\) dilanjutkan pencerminan terhadap garis \(x=5\) maka bayangan titik \((3,2) \) adalah . . .  </li>
                 <input type="radio" name="soal5" value="10" id="soal5"/>
                 \((2,3)\)
                 <br />
@@ -386,7 +386,7 @@
                 \((3,-8) \)
                 <br />
                 <input type="radio" name="soal11" value="0" />
-                \((0,-2) \)
+                \((-7,-2) \)
                 <br>
                 <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal11" aria-expanded="false" aria-controls="collapsesoal11">
                 Alternatif Penyelesaian:
@@ -481,7 +481,7 @@
                 <hr />
 
                 <li>Suatu transformasi bidang memetakan titik <br>
-                \(P(x,y) \to p'(x',y') \) dengan \(\begin{pmatrix}x'\\y' \end{pmatrix}=\begin{pmatrix}a&b\\3&4 \end{pmatrix}\begin{pmatrix}x\\y \end{pmatrix} \) <br>
+                \(P(x,y) \to P'(x',y') \) dengan \(\begin{pmatrix}x'\\y' \end{pmatrix}=\begin{pmatrix}a&b\\3&4 \end{pmatrix}\begin{pmatrix}x\\y \end{pmatrix} \) <br>
                 Agar bayangan titik \((2,3)\) adalah \((8,18)\) dan bayangan titik \((-1,0)\) adalah \((-1,-3)\) oleh pemetaan diatas, maka nilai \(a\) dan \(b\) berturut-turut adalah . . .
                 </li>
                 <input type="radio" name="soal15" value="10" id="soal15" />
@@ -596,7 +596,7 @@
                 \(S''(3,2) \)                
                 <br />
                 <input type="radio" name="soal19" value="0" />
-                \(S''(1,4)\)
+                \(S''(1,2)\)
                 <br />
                 <input type="radio" name="soal19" value="0" />
                 \(S''(3,8)\)
