--- a/kumpulanSoal/transformasiGeometri/rotasiSoal.html
+++ b/kumpulanSoal/transformasiGeometri/rotasiSoal.html
@@ -98,55 +98,55 @@
               <hr />
 
               <ol type="1">
-                <li>SOAL 1</li>
-                <input type="radio" name="soal1" value="0" />
-                \(A \)
+                <li>Bayangan titik koordinat \(P (3 , 5)\) dirotasi dengan arah rotasi \(90^{\circ}\) searah jarum jam adalah . . .</li>
+                <input type="radio" name="soal1" value="10" />
+                \((5,-3) \)
                 <br />
                 <input type="radio" name="soal1" value="0" />
-                \(B \)
+                \((-5,3) \)
                 <br />
                 <input type="radio" name="soal1" value="0"  />
-                \(C \)
+                \((5,3) \)
                 <br />
                 <input type="radio" name="soal1" value="0" />
-                \(D \)
+                \((-3,5) \)
                 <br />
-                <input type="radio" name="soal1" value="10" id="soal1"/>
-                \(E \)
+                <input type="radio" name="soal1" value="0"/>
+                \((3,-5) \)
                 <hr />
                 <!--========================= soal no 2 ===========================================================================-->
-                <li>SOAL 2</li>
-                <input type="radio" name="soal2" value="10" id="soal2" />
-                \(A\)
+                <li>Titik \(A (8 , -3)\) dirotasikan sejauh \(90^{\circ}\) terhadap titik pusat \(O (0 , 0)\) searah jarum jam. Bayangan titik \(A\) adalah . . .</li>
+                <input type="radio" name="soal2" value="0"/>
+                \((3,-8)\)
                 <br />
-                <input type="radio" name="soal2" value="0" />
-                \(B \)
+                <input type="radio" name="soal2" value="10" />
+                \((-3,-8) \)
                 <br />
                 <input type="radio" name="soal2" value="0"  />
-                \(C \)
+                \((-3,8)\)
                 <br />
                 <input type="radio" name="soal2" value="0" />
-                \(D \)
+                \((8,3) \)
                 <br />
                 <input type="radio" name="soal2" value="0" />
-                \(E \)
+                \((8,-3) \)
                 <hr />
                 <!--================================================== soal no 3 ======================================================-->
-                <li>SOAL 3 </li>
+                <li>Persamaan bayangan kurva \(3x + 5y = 15\) jika dirotasikan sebesar \(90^{\circ}\) searah jarum jam dengan titik pusat rotasi \(O(0, 0)\) adalah . . .</li>
                 <input type="radio" name="soal3" value="0"  />
-                \(A \)
+                \(3y+5x=15 \)
                 <br />
                 <input type="radio" name="soal3" value="0"  />
-                \(B \)
+                \(-3y+5x=15 \)
                 <br />
                 <input type="radio" name="soal3" value="0" />
-                \(C \)
+                \(-3y-5x=15 \)
                 <br />
-                <input type="radio" name="soal3" value="10" id="soal3"/>
-                \(D \)
+                <input type="radio" name="soal3" value="10"/>
+                \(3y-5x=15 \)
                 <br />
                 <input type="radio" name="soal3" value="0" />
-                \(E \)
+                \(3y+15=-15 \)
                 <hr />
                 <!-- soal no no4 =================================================================================================-->
                 <li>SOAL 4 </li>
