--- a/kumpulanSoal/transformasiGeometri/rotasiSoal.html
+++ b/kumpulanSoal/transformasiGeometri/rotasiSoal.html
@@ -149,76 +149,77 @@
                 \(3y+15=-15 \)
                 <hr />
                 <!-- soal no no4 =================================================================================================-->
-                <li>SOAL 4 </li>
+                <li>Bayangan titik \(A\) oleh rotasi \(R(0,45^{\circ})\) adalah \((-√2,√2)\). Koordinat titik \(A\) adalah . . . </li>
                 </li>
                 <input type="radio" name="soal4" value="0" />
-                \(A\)
+                \((2,0)\)
                 <br />
                 <input type="radio" name="soal4" value="0" />
-                \(B \)
+                \((0,-2) \)
                 <br />
-                <input type="radio" name="soal4" value="0" />
-                \(C \)
+                <input type="radio" name="soal4" value="10" />
+                \((0,2) \)
                 <br />
                 <input type="radio" name="soal4" value="0"  />
-                \(D \)
+                \((-2,0) \)
                 <br />
-                <input type="radio" name="soal4" value="10" id="soal4">
-                \(E \)
+                <input type="radio" name="soal4" value="0" >
+                \((2,-2) \)
                 <hr />
                 <!-- soal no 5 ================================================================================================-->
-                <li>SOAL 5 </li>
-                <input type="radio" name="soal5" value="10" id="soal5"/>
-                \(A\)
+                <li>Titik \(B(5,-1)\) dirotasikan terhadap titik \(P(2,3)\) sejauh \(90⁰\) searah putaran jam. Bayangan titik B tersebut adalah . . . </li>
+                 <input type="radio" name="soal5" value="0" />
+                \((2,0)\)
                 <br />
                 <input type="radio" name="soal5" value="0" />
-                \(B\)
-                <br />
-                <input type="radio" name="soal5" value="0"   />
-                \(C\)
-                <br />
-                <input type="radio" name="soal5" value="0"/>
-                \(D\)
+                \((0,-2) \)
                 <br />
                 <input type="radio" name="soal5" value="0" />
+                \((0,2) \)
+                <br />
+                <input type="radio" name="soal5" value="10"  />
+                \((-2,0) \)
+                <br />
+                <input type="radio" name="soal5" value="0" >
+                \((2,-2) \) />
                 \(E\)
                 <hr />
                 <!-- =====SOAL NO 6======================================================================= -->
-                <li>SOAL 6</li>
-                <input type="radio" name="soal6" value="10" id="soal6" />
-                \(A \)
+                <li>Jika garis \(x - 2y = 5\) diputar sejauh \(90⁰\) terhadap titik \((2,4)\) berlawanan arah putaran jam, maka persamaan bayangannya adalah . . .</li>
+                <input type="radio" name="soal6" value="0" />
+                \(2x-y=19 \)
+                <br />
+                <input type="radio" name="soal6" value="10" />
+                \(2x+y=19 \)
                 <br />
                 <input type="radio" name="soal6" value="0" />
-                \(B \)
+                \(2x-y=-9 \)
                 <br />
                 <input type="radio" name="soal6" value="0" />
-                \(C \)
+                \(2y-x=19 \)
                 <br />
                 <input type="radio" name="soal6" value="0" />
-                \(D \)
-                <br />
-                <input type="radio" name="soal6" value="0" />
-                \(E \)
+                \(2y+x=-19 \)
                 <hr />
                 <!-- =====SOAL NO 7======================================================================= -->
-                <li>SOAL 7</li>
+                <li>Persamaan bayangan garis \(y=\sqrt{2}x+\sqrt{2} oleh rotasi pada pusat \(O(0,0) \) dengan sudut rotasi \(45⁰\) adalah . . .</li>
                 <input type="radio" name="soal7" value="0" />
-                \(A \)
+                \(y=-(3+2\sqrt{2})x-(2+2\sqrt{2}) \)
                 <br />
                 <input type="radio" name="soal7" value="0" />
-                \(B\)
+                \(y=-(3+2\sqrt{2})x+(2+2\sqrt{2})\)
                 <br />
                 <input type="radio" name="soal7" value="10" id="soal7"/>
-                \(C\)
+                \(y=(3+2\sqrt{2})x-(2+2\sqrt{2})\)
                 <br />
                 <input type="radio" name="soal7" value="0"  />
-                \(D\)
+                \(y=-2\sqrt{2}+2\sqrt{2}\)
                 <br />
                 <input type="radio" name="soal7" value="0" />
-                \(E\)
+                \(y=2\sqrt{2}+2\sqrt{2}\)
                 <hr />
                 <!-- =====SOAL NO 8======================================================================= -->
-                <li>SOAL 8 </li>
+                <li>Titik \(B(5,-2) \) dirotasikan sebesar \(35⁰ \) berlawanan arah putar jarum jam, kemudian dilanjutkan lagi dengan rotasi sebesar \(55⁰\) berlawanan arah putar jarum jam. Jika titik pusat kedua rotasi sama yaitu \((-2,6)\). Maka bayangan titik \(B\) adalah . . . </li>
                 <input type="radio" name="soal8" value="0" />
                 \(A \)
                 <br />
@@ -235,23 +236,24 @@
                 \(E \)
                 <hr />
                 <!-- =====SOAL NO 9======================================================================= -->
-                <li>SOAL 9 </li>
+                <li>Persamaan \(y=x^4-3x+2\) dirotasikan sebesar \(50⁰\) berlawanan arah jarum jam, kemudian dilanjutkan lagi dengan rotasi sebesar \(300⁰\) searah jarum jam, dan dilanjutkan lagi rotasi sebesar \(70⁰\) berlawanan arah jarum jam. Jika titik pusat ketiga rotasi sama yaitu \((0,0)\), maka bayangan persamaan kurva tersebut adalah . . . </li>
                 <input type="radio" name="soal9" value="0" />
                 \(A\)
                 <br />
                 <input type="radio" name="soal9" value="0" />
                 \(B\)
                 <br />
-                <input type="radio" name="soal9" value="10"  />
+                <input type="radio" name="soal9" value="0"  />
                 \(C\)
                 <br />
                 <input type="radio" name="soal9" value="10" id="soal9"/>
-                \(D\)       <br />
+                \(D\)       
+                <br />
                 <input type="radio" name="soal9" value="0" />
                 \(E\)
                 <hr />
                 <!-- =====SOAL NO 10======================================================================= -->
-                <li>SOAL 10 </li>
+                <li>Titik \(B(-2,1)\) dirotasi sejauh \(60⁰\) dengan titik pusat \((1,0)\), lalu dilanjutkan lagi dengan rotasi sebesar \(30⁰\) dengan titik pusat \((-1,3)\). Bayangan titik \(B\) adalah . . . </li>
                 <input type="radio" name="soal10" value="10" id="soal10" />
                 \(A\)
                 <br />
