--- a/kumpulanSoal/transformasiGeometri/rotasiSoal.html
+++ b/kumpulanSoal/transformasiGeometri/rotasiSoal.html
@@ -200,16 +200,52 @@
                 <br />
                 <input type="radio" name="soal6" value="0" />
                 \(2y+x=-19 \)
+                <br>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6" disabled>
+                Alternatif Penyelesaian:
+                </button>
+                <div class="collapse" id="collapse6">
+                  <div class="card card-body overflow-auto">
+                  Misalkan titik (x,y) berada pada garis
+                  \(\begin{align}
+                  \begin{pmatrix}x'\\y' \end{pmatrix} &= \begin{pmatrix}\cos 90⁰ & -\sin 90⁰ \\ \sin 90⁰& \cos 90⁰ \end{pmatrix} \begin{pmatrix}x-2 \\ y-4 \end{pmatrix}+\begin{pmatrix}2\\4 \end{pmatrix} \\
+                  &= \begin{pmatrix}0&-1\\1&0 \end{pmatrix}\begin{pmatrix}x-2 \\ y-4 \end{pmatrix}+\begin{pmatrix}2\\4 \end{pmatrix} \\
+                  &= \begin{pmatrix}-y+4 \\ x-2 \end{pmatrix}+\begin{pmatrix}2\\4 \end{pmatrix} \\
+                  \begin{pmatrix}x'\\y' \end{pmatrix}&= \begin{pmatrix}-y+6 \\ x+2 \end{pmatrix}
+                  \end{align}\)
+                  <br>
+                  \(\begin{align}
+                  x' &= -y+6 \\
+                  y &= -x'+6
+                  \end{align}\)
+                  <br>
+                  \(\begin{align}
+                  y' &= x+2 \\
+                  x &= y'-2
+                  \end{align}\)
+                  <br>
+                  \(\text{Substitusi nilai } x\text{ dan }y \text{ ke persamaan awal } x - 2y = 5\)
+                  \(\begin{align}
+                  x -2y&= 5 \\
+                  (y'-2)-2(-x'+6)&=5 \\
+                  y'-2+2x'-12&=5\\
+                  y'+2x'&=5+12+2 \\
+                  2x'+y' &=19
+                  \end{align}\)
+                  \(\text{Jadi, bayangan garis tersebut adalah } 2x+y=19\)
+                   <b class="text-end"> JAWABAN : B </b>
+                  </div>
+                </div>
                 <hr />
                 <!-- =====SOAL NO 7======================================================================= -->
                 <li>Persamaan bayangan garis \(y=\sqrt{2}x+\sqrt{2}\) oleh rotasi pada pusat \(O(0,0) \) dengan sudut rotasi \(45⁰\) adalah . . .</li>
-                <input type="radio" name="soal7" value="0" />
+                <input type="radio" name="soal7" value="10" />
                 \(y=-(3+2\sqrt{2})x-(2+2\sqrt{2}) \)
                 <br />
                 <input type="radio" name="soal7" value="0" />
                 \(y=-(3+2\sqrt{2})x+(2+2\sqrt{2})\)
                 <br />
-                <input type="radio" name="soal7" value="10" id="soal7"/>
+                <input type="radio" name="soal7" value="0"/>
                 \(y=(3+2\sqrt{2})x-(2+2\sqrt{2})\)
                 <br />
                 <input type="radio" name="soal7" value="0"  />
@@ -222,6 +258,7 @@
                 </button>
                 <div class="collapse" id="collapsesoal7">
                   <div class="card card-body overflow-auto">
+                    Misalkan titik (x,y) berada pada garis
                     \(\begin{align}
                     \begin{pmatrix}x'\\y' \end{pmatrix} &= \begin{pmatrix}\cos 45⁰ & -\sin 45⁰ \\ \sin 45⁰& \cos 45⁰ \end{pmatrix}\begin{pmatrix}x\\y \end{pmatrix} \\
                     &= \begin{pmatrix} \frac{1}{2}\sqrt{2} & -\frac{1}{2}\sqrt{2} \\ \frac{1}{2}\sqrt{2} & \frac{1}{2}\sqrt{2} \end{pmatrix}\begin{pmatrix}x\\y \end{pmatrix} \\
