--- a/kumpulanSoal/transformasiGeometri/rotasiSoal.html
+++ b/kumpulanSoal/transformasiGeometri/rotasiSoal.html
@@ -98,7 +98,7 @@
               <hr />
 
               <ol type="1">
-                <li>Bayangan titik koordinat \(P (3 , 5)\) dirotasi dengan arah rotasi \(90^{\circ}\) searah jarum jam adalah . . .</li>
+                <li>Bayangan titik koordinat \(P (3 , 5)\) dirotasi dengan arah rotasi \(90^{\circ}\) berlawanan arah putar jarum jam adalah . . .</li>
                 <input type="radio" name="soal1" value="10" />
                 \((5,-3) \)
                 <br />
