--- a/kumpulanSoal/transformasiGeometri/rotasiSoal.html
+++ b/kumpulanSoal/transformasiGeometri/rotasiSoal.html
@@ -103,10 +103,10 @@
                 \((5,-3) \)
                 <br />
                 <input type="radio" name="soal1" value="0" />
-                \((-5,3) \)
+                \((5,3) \)
                 <br />
                 <input type="radio" name="soal1" value="0"  />
-                \((5,3) \)
+                \((-5,3) \)
                 <br />
                 <input type="radio" name="soal1" value="0" />
                 \((-3,5) \)
@@ -114,13 +114,19 @@
                 <input type="radio" name="soal1" value="0"/>
                 \((3,-5) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal1" aria-expanded="false" aria-controls="collapsesoal1">
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal1" aria-expanded="false" aria-controls="collapsesoal1" disabled>
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal1">
                   <div class="card card-body overflow-auto">
-                  Penyelesaian ketik disini
-                  <b class="text-end"> JAWABAN :  </b>
+                    \(\begin{align}
+                    \begin{pmatrix}x'\\y'\end{pmatrix} &= \begin{pmatrix}\cos (90⁰) & -\sin (90⁰) \\ \sin (90⁰)& \cos (90⁰) \end{pmatrix}\begin{pmatrix}3\\5\end{pmatrix} \\
+                    &= \begin{pmatrix}0&-1\\1&0 \end{pmatrix}\begin{pmatrix}3\\5 \end{pmatrix} \\
+                    \begin{pmatrix}x'\\y' \end{pmatrix} &= \begin{pmatrix}-5\\3 \end{pmatrix}
+                    \end{align}\)
+                    <br>
+                    \(\text{Jadi bayangan titik } P \text{ adalah } P'(-5,3)\)
+                  <b class="text-end"> JAWABAN : C </b>
                   </div>
                 </div>
                 <hr />
@@ -141,13 +147,19 @@
                 <input type="radio" name="soal2" value="0" />
                 \((8,-3) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal2" aria-expanded="false" aria-controls="collapsesoal2">
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal2" aria-expanded="false" aria-controls="collapsesoal2" disabled>
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal2">
                   <div class="card card-body overflow-auto">
-                  Penyelesaian ketik disini
-                  <b class="text-end"> JAWABAN :  </b>
+                    \(\begin{align}
+                    \begin{pmatrix}x'\\y'\end{pmatrix} &= \begin{pmatrix}\cos (-90⁰) & -\sin (-90⁰) \\ \sin (-90⁰)& \cos (-90⁰) \end{pmatrix}\begin{pmatrix}8\\-3\end{pmatrix} \\
+                    &= \begin{pmatrix}0&1\\-1&0 \end{pmatrix}\begin{pmatrix}8\\-3 \end{pmatrix} \\
+                    \begin{pmatrix}x'\\y' \end{pmatrix} &= \begin{pmatrix}-3\\-8 \end{pmatrix}
+                    \end{align}\)
+                    <br>
+                    \(\text{Jadi bayangan titik } A \text{ adalah } A'(-3,-8)\)
+                  <b class="text-end"> JAWABAN : B </b>
                   </div>
                 </div>
                 <hr />
@@ -167,8 +179,8 @@
                 <br />
                 <input type="radio" name="soal3" value="0" />
                 \(3y+15=-15 \)
-                <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal3" aria-expanded="false" aria-controls="collapsesoal3">
+                <br />
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal3" aria-expanded="false" aria-controls="collapsesoal3" disabled>
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal3">
@@ -209,12 +221,12 @@
                 <input type="radio" name="soal4" value="0" />
                 \((2,-2) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal4" aria-expanded="false" aria-controls="collapsesoal4">
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal4" aria-expanded="false" aria-controls="collapsesoal4" disabled>
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal4">
                   <div class="card card-body overflow-auto">
-                    Titik bayangan jika diputar dengan arah yang berbeda dari dengan rotasi awal maka akan mendapatkan titik asal.
+                    Titik bayangan jika diputar dengan arah yang berbeda dari rotasi awal maka akan mendapatkan titik asal.
                   \(\begin{align}
                   \begin{pmatrix}x'\\y' \end{pmatrix} &= \begin{pmatrix}\cos (-45⁰) & -\sin (-45⁰) \\ \sin (-45⁰)& \cos (-45⁰) \end{pmatrix}\begin{pmatrix}-\sqrt{2} \\ \sqrt{2} \end{pmatrix} \\
                   &= \begin{pmatrix}\frac{1}{2}\sqrt{2}&\frac{1}{2}\sqrt{2}\\-\frac{1}{2}\sqrt{2}&\frac{1}{2}\sqrt{2} \end{pmatrix}\begin{pmatrix}-\sqrt{2}\\ \sqrt{2} \end{pmatrix} \\
@@ -243,7 +255,7 @@
                 <input type="radio" name="soal5" value="0" />
                 \((2,-2) \)
                 <br>
-                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal5" aria-expanded="false" aria-controls="collapsesoal5">
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal5" aria-expanded="false" aria-controls="collapsesoal5" disabled>
                 Alternatif Penyelesaian:
                 </button>
                 <div class="collapse" id="collapsesoal5">
@@ -576,58 +588,11 @@
               <a href="../transformasiGeometri/transgeo1.html" class="list-group-item list-group-item-action">Latihan Soal Transformasi Geometri I</a>
               <a href="../transformasiGeometri/transgeo2.html" class="list-group-item list-group-item-action">Latihan Soal Transformasi Geometri II</a>
               <a href="../../kumpulanMateri/transformasi/" class="list-group-item list-group-item-action">Materi Transformasi Geometri</a>
-              <button class="btn btn-danger" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions" disabled>KLIK UNTUK MELIHAT KUNCI JAWABAN</button>
-            </div>
+             </div>
         </div>
       </div>
     </section>
-    <!-- SOAL KUIS END-->
-    <!----------------------------------------------------------------------------------------------------------------------------->
-    <!-- START OFFCANVAS KUNCI -->
-    <!-- ================================================================================================================================ -->
-    <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">
-          KUNCI JAWABAN <br />
-          Latihan Soal Rotasi
-        </h5>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <div class="row">
-          <div class="col">
-            <ol>
-              <li>E</li>
-              <li>A</li>
-              <li>D</li>
-              <li>E</li>
-              <li>A</li>
-            </ol>
-          </div>
-          <div class="col">
-            <ol start="6">
-              <li>A</li>
-              <li>C</li>
-              <li>B</li>
-              <li>D</li>
-              <li>A</li>
-            </ol>
-          </div>
-          <div class="col">
-            <ol start="11">
-              <li>A</li>
-              <li>C</li>
-              <li>C</li>
-              <li>E</li>
-              <li>A</li>
-            </ol>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- ================================================================================================================================ -->
-    <!-- END KUNCI -->
+   
     <!---------------------------------------------------------------------------------------------------------------------------------------->
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
