--- a/kumpulanSoal/transformasiGeometri/translasisoal.html
+++ b/kumpulanSoal/transformasiGeometri/translasisoal.html
@@ -113,6 +113,21 @@
                 <br />
                 <input type="radio" name="soal1" value="10" id="soal1"/>
                 \(A'(1, 9) \)
+                <br>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal1" aria-expanded="false" aria-controls="collapsesoal1" disabled>
+                Alternatif Penyelesaian:
+                </button>
+                <div class="collapse" id="collapsesoal1">
+                  <div class="card card-body overflow-auto">
+                    \(\begin{align}
+                    \begin{pmatrix}x'\\y'\end{pmatrix} &= \begin{pmatrix}-2\\4 \end{pmatrix}+\begin{pmatrix}3\\5\end{pmatrix} \\
+                    &= \begin{pmatrix}1\\9 \end{pmatrix}
+                    \end{align}\)
+                    <br>
+                    \(\text{Jadi, bayangan titik } A \text{ adalah } A'(1,9)\)
+                   <b class="text-end"> JAWABAN : E </b>
+                  </div>
+                </div>
                 <hr />
                 <!--========================= soal no 2 ===========================================================================-->
                 <li>Diketahui titik \(P'(4,-12)\) adalah bayangan titik \(P\) oleh translasi \(T=\begin{pmatrix}-9 \\ 8 \end{pmatrix} \). Koordinat titik \(P\) adalah . . .</li>
@@ -130,6 +145,22 @@
                 <br />
                 <input type="radio" name="soal2" value="0" />
                 \((-5, -20) \)
+                <br>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal2" aria-expanded="false" aria-controls="collapsesoal2" disabled>
+                Alternatif Penyelesaian:
+                </button>
+                <div class="collapse" id="collapsesoal2">
+                  <div class="card card-body overflow-auto">
+                    \(\begin{align}
+                    \begin{pmatrix}4\\-12\end{pmatrix} &= \begin{pmatrix}-9\\8 \end{pmatrix}+\begin{pmatrix}x\\y\end{pmatrix} \\
+                    \begin{pmatrix}4\\-12\end{pmatrix}-\begin{pmatrix}-9\\8 \end{pmatrix}&= \begin{pmatrix}x\\y \end{pmatrix} \\
+                    \begin{pmatrix}x\\y \end{pmatrix} &= \begin{pmatrix}13\\-20 \end{pmatrix}
+                    \end{align}\)
+                    <br>
+                    \(\text{Jadi, titik } P \text{ adalah } (13,-20)\)
+                   <b class="text-end"> JAWABAN : A </b>
+                  </div>
+                </div>
                 <hr />
                 <!--================================================== soal no 3 ======================================================-->
                 <li>Titik \(A\) ditranslasikan oleh \(T=\begin{pmatrix}6 \\ -3 \end{pmatrix}\) menghasilkan titik \(A'(4,-2) \). Koordinat titik \(A\) adalah . . . </li>
@@ -147,6 +178,22 @@
                 <br />
                 <input type="radio" name="soal3" value="0" />
                 \((-2, -1) \)
+                <br>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal3" aria-expanded="false" aria-controls="collapsesoal3" disabled>
+                Alternatif Penyelesaian:
+                </button>
+                <div class="collapse" id="collapsesoal3">
+                  <div class="card card-body overflow-auto">
+                    \(\begin{align}
+                    \begin{pmatrix}4\\-2\end{pmatrix} &= \begin{pmatrix}6\\-3 \end{pmatrix}+\begin{pmatrix}x\\y\end{pmatrix} \\
+                    \begin{pmatrix}4\\-2\end{pmatrix}-\begin{pmatrix}6\\-3 \end{pmatrix}&= \begin{pmatrix}x\\y \end{pmatrix} \\
+                    \begin{pmatrix}x\\y \end{pmatrix} &= \begin{pmatrix}-2\\1 \end{pmatrix}
+                    \end{align}\)
+                    <br>
+                    \(\text{Jadi, titik } A \text{ adalah } (-2,1)\)
+                   <b class="text-end"> JAWABAN : D </b>
+                  </div>
+                </div>
                 <hr />
                 <!-- soal no no4 =================================================================================================-->
                 <li>Diketahui translasi \(T \) memetakan titik \(C(-4,2) \) ke titik \(C'(-1, 6) \). Translasi \(T\) akan memetakan titik \(D(3,-2) \) ke titik . . . </li>
@@ -165,6 +212,26 @@
                 <br />
                 <input type="radio" name="soal4" value="10" id="soal4">
                 \(D'(6,2) \)
+                <br>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal4" aria-expanded="false" aria-controls="collapsesoal4" disabled>
+                Alternatif Penyelesaian:
+                </button>
+                <div class="collapse" id="collapsesoal4">
+                  <div class="card card-body overflow-auto">
+                    \(\begin{align}
+                    \begin{pmatrix}-1\\6\end{pmatrix} &= \begin{pmatrix}a\\b \end{pmatrix}+\begin{pmatrix}-4\\2\end{pmatrix} \\
+                    \begin{pmatrix}-1\\6\end{pmatrix}-\begin{pmatrix}-4\\2 \end{pmatrix}&= \begin{pmatrix}a\\b \end{pmatrix} \\
+                    \begin{pmatrix}a\\b \end{pmatrix} &= \begin{pmatrix}3\\-4 \end{pmatrix}
+                    \end{align}\)
+                    Sehingga
+                    \(\begin{align}
+                    \begin{pmatrix}x'\\y' \end{pmatrix} &= \begin{pmatrix}3\\-4 \end{pmatrix} + \begin{pmatrix}3\\-2 \end{pmatrix} \\ &= \begin{pmatrix}6\\-6 \end{pmatrix}
+                    \end{align}\)
+                    <br>
+                    \(\text{Jadi, bayangan titik } D \text{ adalah } D'(6,-6)\)
+                   <b class="text-end"> JAWABAN : D </b>
+                  </div>
+                </div>
                 <hr />
                 <!-- soal no 5 ================================================================================================-->
                 <li>Segitiga \(PQR\) mempunyai koordinat \(P(-3,4) \), \(Q(-1,0)\) dan \(R(0,2) \). Segitiga ditranslasikan oleh \(T\) menghasilkan bayangan segitiga \(P'Q'R'\). Jika koordinat titik \(P'(1,-2) \), koordinat titik \(Q'\) dan \(R'\) berturut-turut adalah . . . </li>
@@ -182,6 +249,31 @@
                 <br />
                 <input type="radio" name="soal5" value="0" />
                 \((-3,-6) \) dan \((4,-4) \)
+                <br>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal5" aria-expanded="false" aria-controls="collapsesoal5" disabled>
+                  Alternatif Penyelesaian:
+                  </button>
+                  <div class="collapse" id="collapsesoal5">
+                    <div class="card card-body overflow-auto">
+                      \(\begin{align}
+                      \begin{pmatrix}1\\-2\end{pmatrix} &= \begin{pmatrix}a\\b \end{pmatrix}+\begin{pmatrix}-3\\4\end{pmatrix} \\
+                      \begin{pmatrix}1\\-2\end{pmatrix}-\begin{pmatrix}-3\\4 \end{pmatrix}&= \begin{pmatrix}a\\b \end{pmatrix} \\
+                      \begin{pmatrix}a\\b \end{pmatrix} &= \begin{pmatrix}4\\-6 \end{pmatrix}
+                      \end{align}\)
+                      Sehingga
+
+                      \(\begin{align}
+                      Q' \to \begin{pmatrix}x'\\y' \end{pmatrix} &= \begin{pmatrix}4\\-6 \end{pmatrix} + \begin{pmatrix}-1\\0 \end{pmatrix} \\ &= \begin{pmatrix}3\\-6 \end{pmatrix}
+                      \end{align}\)
+                      <br>
+                      \(\begin{align}
+                      R' \to \begin{pmatrix}x'\\y' \end{pmatrix} &= \begin{pmatrix}4\\-6 \end{pmatrix} + \begin{pmatrix}0\\2 \end{pmatrix} \\ &= \begin{pmatrix}4\\-4 \end{pmatrix}
+                      \end{align}\)
+                      <br>
+                      \(\text{Jadi, titik } Q' \text{ dan }R' \text{ berturut-turut adalah }\) \((3,-6) \text{ dan } (4,-4)\) 
+                     <b class="text-end"> JAWABAN : A </b>
+                    </div>
+                  </div>
                 <hr />
                 <!-- =====SOAL NO 6======================================================================= -->
                 <li>Diketahui titik \(P'(3,-13) \) adalah bayangan titik \(P\) oleh translasi \(T=\begin{pmatrix}-10\\7 \end{pmatrix} \). Koordinat titik \(P\) adalah . . . </li>
@@ -199,6 +291,20 @@
                 <br />
                 <input type="radio" name="soal6" value="0" />
                 \((-5,-20) \)
+                <br>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal6" aria-expanded="false" aria-controls="collapsesoal6" disabled>
+                Alternatif Penyelesaian:
+                </button>
+                <div class="collapse" id="collapsesoal6">
+                  <div class="card card-body overflow-auto">
+                    \(\begin{align}
+                    \begin{pmatrix}3\\-13\end{pmatrix} &= \begin{pmatrix}-10\\7 \end{pmatrix}+\begin{pmatrix}x\\y\end{pmatrix} \\
+                    \begin{pmatrix}3\\-13\end{pmatrix}-\begin{pmatrix}-10\\7 \end{pmatrix}&= \begin{pmatrix}x\\y \end{pmatrix} \\
+                    \begin{pmatrix}x\\y \end{pmatrix} &= \begin{pmatrix}13\\-20 \end{pmatrix}
+                    \end{align}\)
+                   <b class="text-end"> JAWABAN : A </b>
+                  </div>
+                </div>
                 <hr />
                 <!-- =====SOAL NO 7======================================================================= -->
                 <li>Titik \(A(7, -6)\) ditranslasikan oleh \(T = (-2, 4)\), maka koordinat titik \(A'\) adalah . . .</li>
@@ -216,6 +322,21 @@
                 <br />
                 <input type="radio" name="soal7" value="0" />
                 \((10,9)\)
+                <br>
+                <button class="btn btn-secondary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsesoal7" aria-expanded="false" aria-controls="collapsesoal7" disabled>
+                Alternatif Penyelesaian:
+                </button>
+                <div class="collapse" id="collapsesoal7">
+                  <div class="card card-body overflow-auto">
+                    \(\begin{align}
+                    \begin{pmatrix}x'\\y'\end{pmatrix} &= \begin{pmatrix}-2\\4 \end{pmatrix}+\begin{pmatrix}7\\-6\end{pmatrix} \\
+                    &= \begin{pmatrix}5\\-2 \end{pmatrix}
+                    \end{align}\)
+                    <br>
+                    \(\text{Jadi, bayangan titik } A \text{ adalah } A'(5,-2)\)
+                   <b class="text-end"> JAWABAN : C </b>
+                  </div>
+                </div>
                 <hr />
                 <!-- =====SOAL NO 8======================================================================= -->
                 <li>Jika titik \(G'(4, -1)\) adalah bayangan titik dari \(G(7, -5)\) oleh translasi \(T\), maka nilai \(T\) adalah . . . </li>
