--- a/kumpulanSoal/transformasiGeometri/index.html
+++ b/kumpulanSoal/transformasiGeometri/index.html
@@ -26,7 +26,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <title>Soal Latihan Matriks</title>
+    <title>Soal Latihan</title>
     <script async src="https://tally.so/widgets/embed.js"></script>
   </head>
   <body id="home">
@@ -62,14 +62,14 @@
     <section style="padding-bottom: 7rem;">
         <div class="container">
             <div class="row justify-content-center text-center">
-              <h1>Kumpulan Latihan Soal<br> Matriks Dasar dan Operasi Matriks</h1>
+              <h1>Kumpulan Latihan Soal<br> Transformasi Geometri</h1>
               <hr>
               <br>
               <br>
                       <div class="card" style="width: 15rem;">
                           <img src="../../home/11transformasigeometri.png" class="card-img-top img-fluid" alt="9matriks.png">
                           <div class="card-body">
-                            <p class="card-text">Kumpulan latihan soal materi Matriks dasar dan Operasi Matriks</p>
+                            <p class="card-text">Kumpulan latihan soal materi Transformasi Geometri</p>
                             <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvastransformasi" aria-controls="offcanvastransformasi">PILIH PAKET SOAL</button>
                           </div>
                         </div>
