--- a/kumpulanSoal/transformasiGeometri/refleksiSoal.html
+++ b/kumpulanSoal/transformasiGeometri/refleksiSoal.html
@@ -258,7 +258,7 @@ gtag('config', 'G-WWKYNJM30L');
                 <hr />
 <!-- =====SOAL NO 10======================================================================= -->
                 <li>Bayangan titik \(K(2,4) \) dicerminkan terhadap garis \(y=-x\) adalah. . . </li>
-                <input type="radio" name="soal10" value="10" id="soal10" />
+                <input type="radio" name="soal10" value="0" />
                 \((-4,-2)\)
                 <br />
                 <input type="radio" name="soal10" value="0" />
@@ -267,8 +267,8 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal10" value="0" />
                 \((2,4)\)
                 <br />
-                <input type="radio" name="soal10" value="0" />
-                \((4,-2)\)
+                <input type="radio" name="soal10" value="10" />
+                \((4,2)\)
                 <br />
                 <input type="radio" name="soal10" value="0" />
                 \((-4,2)\)
@@ -354,10 +354,10 @@ gtag('config', 'G-WWKYNJM30L');
                 <input type="radio" name="soal15" value="0" />
                 \(\text{sumbu}-X\)
                 <br />
-                <input type="radio" name="soal15" value="0" />
+                <input type="radio" name="soal15" value="10" />
                 \(\text{garis } y=-x\)
                 <br />
-                <input type="radio" name="soal15" value="10" id="soal15" />
+                <input type="radio" name="soal15" value="0"/>
                 \(\text{garis } y=x\)
                 <hr />
 <!-- =====SOAL NO 16======================================================================= -->
@@ -484,21 +484,21 @@ gtag('config', 'G-WWKYNJM30L');
                 \(x=-y^2+3y+3\)
                 <hr />
 <!-- =====SOAL NO 23======================================================================= -->
-                <li>Koordinat bayangan titik \((0,2)\) oleh refleksi garis \(y=x+3\) adalah . . .</li>
+                <li>Koordinat bayangan titik \((0,2)\) oleh refleksi garis \(y=x\) adalah . . .</li>
                 <input type="radio" name="soal23" value="0"  />
-                \((-3,1)\)
+                \((-2,0)\)
                 <br />
                 <input type="radio" name="soal23" value="0" />
-                \((3,-1)\)
+                \((0,-2)\)
                 <br />
                 <input type="radio" name="soal23" value="0" />
-                \((1,-3)\)
+                \((1,-2)\)
                 <br />
                 <input type="radio" name="soal23" value="10" id="soal23"/>
-                \((-1,3)\)
+                \((2,0)\)
                 <br />
                 <input type="radio" name="soal23" value="0" />
-                \((3,1)\)
+                \((2,1)\)
                 <hr />
 <!-- =====SOAL NO 24======================================================================= -->
                 <li>Transformasi \(T\) merupakan pencerminan terhadap garis \(y=\frac{1}{3} x\) dilanjutkan oleh pencerminan terhadap garis \(y=-3x\). Matriks penyajian \(T\) adalah . . .</li>
@@ -518,21 +518,21 @@ gtag('config', 'G-WWKYNJM30L');
                 \(\begin{pmatrix}0&-1\\-1&0 \end{pmatrix}\)
                 <hr />
 <!-- =====SOAL NO 25======================================================================= -->
-                <li>Sebuah persamaan lingkaran \(x^2+y^2-4x+6y-8=0\) dicerminkan terhadap \(y=x+3\), maka bayangannya adalah . . .</li>
+                <li>Sebuah persamaan lingkaran \(x^2+y^2-4x+6y-8=0\) dicerminkan terhadap \(y=x\), maka bayangannya adalah . . .</li>
                 <input type="radio" name="soal25" value="0" />
-                \(x^2+y^2+12x-10y-40=0\)
+                \(x^2+y^2+6x-4y-16=0\)
                 <br />
                 <input type="radio" name="soal25" value="0" />
-                \(x^2+y^2+12x-10y+60=0\)
+                \(x^2+y^2+6x-4y+8=0\)
                 <br />
                 <input type="radio" name="soal25" value="10" id="soal25" />
-                \(x^2+y^2+12x-10y+40=0\)
+                \(x^2+y^2+6x-4y-8=0\)
                 <br />
                 <input type="radio" name="soal25" value="0" />
-                \(x^2+y^2+12x-10y-60=0\)
+                \(x^2+y^2+6x-4y-16=0\)
                 <br />
                 <input type="radio" name="soal25" value="0" />
-                \(x^2+y^2-12x+10y+40=0\)
+                \(x^2+y^2-6x+4y+16=0\)
                 <hr />
 
             </ol>
